refatoarção da integração